tests/sksl/errors/GrNoFragmentProcessorConstruction.fp
in fragmentProcessor child;

void main() {
    sk_OutColor = sample(fragmentProcessor(child));
}
